--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
+<html lang="pt-br">
+  <head>
+    <title>Notícias Cidade</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <!-- Titulo da pagina -->
+    <meta name="description" content="Pagina de notícias" />
+    <meta name="keywords" content="Palavras chaves da pagina" />
+
+    <link href="css/main.css" rel="stylesheet" />
+  </head>
+  <body class="home">
+
+    <!-- Início do container -->
+    <div id="container">
+
+      <!-- Início topo -->
+      <div id="topo">
+        <h1 class="logo">Notícias Cidades</h1>
+        <ul id="navegacao">
+          <li class="primeiro">
+            <a id="home" href="index.html">Home</a>
+          </li>
+          <li>
+            <a id="brasil" href="brasil.html">Brasil</a>
+          </li>
+          <li>
+            <a id="internacional" href="internacional.html">Internacional</a>
+          </li>
+          <li>
+            <a id="economia" href="economia.html">Economia</a>
+          </li>
+          <li>
+            <a id="saude" href="saude.html">Saúde</a>
+          </li>
+          <li>
+            <a id="ciencia" href="ciencia.html">Ciência</a>
+          </li>
+          <li>
+            <a id="fotos" href="fotos.html">Fotos</a>
+          </li>
+        </ul>
+      </div> <!-- Fim topo -->
+
+       <!-- Início Conteúdo -->
+      <div id="conteudo">
+        <div id="primario">Primário</div>
+        <div id="secundario">Secundário</div>
+        <div id="lateral">Lateral</div>
+        
+      </div> <!-- Fim conteúdo -->
+
     
-    </body>
+
+
+
+    </div> <!-- Fim container -->
+
+    <div id="container-rodape">
+        <div id="rodape">
+          &copy; Copyright 2023 - Notícias Cidade
+        </div>
+    </div>
+  </body>
 </html>
