--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="css/main.css" rel="stylesheet" />
   </head>
-  <body class="home">
+  <body id="tres-colunas" class="home">
 
     <!-- Início do container -->
     <div id="container">
@@ -48,7 +48,11 @@
       <div id="conteudo">
         <div id="primario">Primário</div>
         <div id="secundario">Secundário</div>
-        <div id="lateral">Lateral</div>
+
+        <!-- Início lateral -->
+        <div id="lateral">Lateral
+
+        </div>  <!-- fim lateral -->
         
       </div> <!-- Fim conteúdo -->
 
