Formatação da caixa do conteúdo finalizada

--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
         <div id="secundario">Secundário</div>
 
         <!-- Início lateral -->
-        <div id="lateral">Lateral
+        <div id="lateral">
+          <div class="caixa">
+
+            <h2>Entrevistas</h2>
+            <div class="caixa-conteudo">
+                  Conteúdo <br>
+                  Conteúdo <br>
+                  Conteúdo <br>
+                  Conteúdo <br>
+            </div>
+
+          </div>
 
         </div>  <!-- fim lateral -->
         
