--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
 
        <!-- Início Conteúdo -->
       <div id="conteudo">
-        <div id="primario">Primário</div>
-        <div id="secundario">Secundário</div>
+        <div id="primario">
 
-        <!-- Início lateral -->
-        <div id="lateral">
-          <div class="caixa">
+          <div class="caixa"> <!-- Início Caixa -->
 
             <h2>Entrevistas</h2>
             <div class="caixa-conteudo">
@@ -61,7 +58,47 @@
                   Conteúdo <br>
             </div>
 
-          </div>
+          </div> <!-- Fim caixa -->
+        </div>
+        <div id="secundario">Secundário</div>
+
+        <!-- Início lateral -->
+        <div id="lateral">
+          <div class="caixa"> <!-- Início Caixa -->
+
+            <h2>Entrevistas</h2>
+            <div class="caixa-conteudo">
+              <ul>
+                <li><a href="#">José Almeida</a></li>
+                <li><a href="#">Felipe Silva</a></li>
+                <li><a href="#">Renato Rodrigues</a></li>
+                <li><a href="#">Abelardo Silveira</a></li>
+                <li><a href="#">André Carlos</a></li>
+                <li><a href="#">Márcio Mello</a></li>
+                <li><a href="#">João Pedro</a></li>
+                <li><a href="#">Fernando Weiss</a></li>
+              </ul>           
+            </div>
+
+          </div> <!-- Fim caixa -->
+
+          <div class="caixa"> <!-- Início Caixa -->
+
+            <h2>News</h2>
+            <div class="caixa-conteudo">
+              <ul>
+                <li><a href="#">José Almeida</a></li>
+                <li><a href="#">Felipe Silva</a></li>
+                <li><a href="#">Renato Rodrigues</a></li>
+                <li><a href="#">Abelardo Silveira</a></li>
+                <li><a href="#">André Carlos</a></li>
+                <li><a href="#">Márcio Mello</a></li>
+                <li><a href="#">João Pedro</a></li>
+                <li><a href="#">Fernando Weiss</a></li>
+              </ul>           
+            </div>
+
+          </div> <!-- Fim caixa -->
 
         </div>  <!-- fim lateral -->
         
