--- a/index.html
+++ b/index.html
@@ -86,16 +86,22 @@
 
             <h2>News</h2>
             <div class="caixa-conteudo">
-              <ul>
-                <li><a href="#">José Almeida</a></li>
-                <li><a href="#">Felipe Silva</a></li>
-                <li><a href="#">Renato Rodrigues</a></li>
-                <li><a href="#">Abelardo Silveira</a></li>
-                <li><a href="#">André Carlos</a></li>
-                <li><a href="#">Márcio Mello</a></li>
-                <li><a href="#">João Pedro</a></li>
-                <li><a href="#">Fernando Weiss</a></li>
-              </ul>           
+
+              <form>
+
+                <div>
+                  <label for="email">Email:</label>
+                  <input type="text" name="email" id="email" placeholder="Digite o seu E-mail">
+                </div>
+
+                <div>
+
+                  <input class="btn-submit" type="submit" Value="Cadastrar">
+
+                </div>
+
+              </form>      
+
             </div>
 
           </div> <!-- Fim caixa -->
