--- a/index.html
+++ b/index.html
@@ -150,11 +150,66 @@
           </div>
           <!-- Fim caixa -->
 
-          <div class="caixa destaque">
+          <div class="caixa">
             <!-- Início Caixa -->
 
-            <h2>Destaque</h2>
-            <div class="caixa-conteudo">conteudo</div>
+            <h2>Notícias recentes</h2>
+            <div class="caixa-conteudo">
+              <ul id="lista-noticias">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="imagens/tecnologia.jpg"
+                      alt="tecnologia"
+                      width="80"
+                    />
+                    <h3>novas tecnologias!</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    </p></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="imagens/tecnologia.jpg"
+                      alt="tecnologia"
+                      width="80"
+                    />
+                    <h3>novas tecnologias!</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    </p></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="imagens/tecnologia.jpg"
+                      alt="tecnologia"
+                      width="80"
+                    />
+                    <h3>novas tecnologias!</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    </p></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="imagens/tecnologia.jpg"
+                      alt="tecnologia"
+                      width="80"
+                    />
+                    <h3>novas tecnologias!</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    </p></a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
