Atualização da configuração das colunas

--- a/index.html
+++ b/index.html
@@ -51,18 +51,19 @@
 
             <h2>Destaque</h2>
             <div class="caixa-conteudo caixa-hover">
-              <a href="#"><h3>Nova Legislação</h3>
-              <img
-                class="imagem-principal"
-                src="imagens/taxi.jpg"
-                alt="Imagem de um táxi"
-                width="100%"
-              />
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Dolorum, fugit voluptas.
-              </p>
-              Leia mais!</a>
+                <h3>Nova Legislação</h3>
+                <img
+                  class="imagem-principal"
+                  src="imagens/taxi.jpg"
+                  alt="Imagem de um táxi"
+                  width="100%"
+                />
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Dolorum, fugit voluptas.
+                </p>
+                <a href="#">Leia mais!</a
+              >
             </div>
           </div>
           <!-- Fim caixa -->
@@ -134,18 +135,20 @@
 
             <h2>Última Entrevista</h2>
             <div class="caixa-conteudo caixa-hover">
-              <a href="#"><h3>entrevista com felipe silva</h3>
-              <img
-                class="imagem-principal"
-                src="imagens/doutor.jpg"
-                alt="doutor"
-                width="100%"
-              />
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Dolorum, fugit voluptas.
-              </p>
-              Leia mais!</a>
+              
+                <h3>entrevista com felipe silva</h3>
+                <img
+                  class="imagem-principal"
+                  src="imagens/doutor.jpg"
+                  alt="doutor"
+                  width="100%"
+                />
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Dolorum, fugit voluptas.
+                </p>
+                <a href="#">Leia mais!</a
+              >
             </div>
           </div>
           <!-- Fim caixa -->
