--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
             <h2>Destaque</h2>
             <div class="caixa-conteudo caixa-hover">
+              <a href="#">
                 <h3>Nova Legislação</h3>
                 <img
                   class="imagem-principal"
@@ -62,7 +63,7 @@
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Dolorum, fugit voluptas.
                 </p>
-                <a href="#">Leia mais!</a
+                Leia mais!</a
               >
             </div>
           </div>
@@ -135,7 +136,7 @@
 
             <h2>Última Entrevista</h2>
             <div class="caixa-conteudo caixa-hover">
-              
+              <a href="#">
                 <h3>entrevista com felipe silva</h3>
                 <img
                   class="imagem-principal"
@@ -147,7 +148,7 @@
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Dolorum, fugit voluptas.
                 </p>
-                <a href="#">Leia mais!</a
+                Leia mais!</a
               >
             </div>
           </div>
@@ -162,11 +163,20 @@
                 <li>
                   <a href="#"
                     ><img
-                      src="imagens/tecnologia.jpg"
+                      src="imagens/cidade.jpg"
                       alt="tecnologia"
                       width="80"
                     />
-                    <h3>novas tecnologias!</h3>
+                    <h3>Noticias da sua cidade</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    </p></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="imagens/taxi.jpg" alt="tecnologia" width="80" />
+                    <h3>novidades sobre táxi</h3>
                     <p>
                       Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </p></a
@@ -188,24 +198,11 @@
                 <li>
                   <a href="#"
                     ><img
-                      src="imagens/tecnologia.jpg"
+                      src="imagens/doutor.jpg"
                       alt="tecnologia"
                       width="80"
                     />
-                    <h3>novas tecnologias!</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    </p></a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><img
-                      src="imagens/tecnologia.jpg"
-                      alt="tecnologia"
-                      width="80"
-                    />
-                    <h3>novas tecnologias!</h3>
+                    <h3>dicas com o doutor!</h3>
                     <p>
                       Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </p></a
